# C-Matrix-Library

./: .cproject  .project  CMakeLists.txt  README.MD
Debug/: makefile
Debug/src/: matrix_functions.d  subdir.mk
dox/: doxy
dox/html/: annotated.html  classMatrix-members.html  classMatrix.html  classes.html  demo_8cpp.html  demo_8cpp__incl.map  demo_8cpp__incl.md5  dir_13e138d54eb8818da29c3992edef070a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  matrix__functions_8hpp_source.html  test_8cpp.html  test_8cpp__incl.map  test_8cpp__incl.md5
dox/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  functions_0.js  functions_2.js  searchdata.js
dox/latex/: annotated.tex  classMatrix.tex  demo_8cpp.tex  demo_8cpp__incl.md5  dir_13e138d54eb8818da29c3992edef070a.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  main_8cpp.tex  main_8cpp__incl.md5  refman.tex  test_8cpp.tex  test_8cpp__incl.md5
include/: matrix_functions.hpp
src/: CMakeLists.txt  demo.cpp
test/: CMakeLists.txt  main.cpp  test.cpp
